# purrrfect

./: .envrc  pyproject.toml
purrrfect/: cache.py  cli.py  configs.py  prefect_api.py
purrrfect/commands/: __init__.py  config.py  deployments.py  environment.py  flow_runs.py  logs.py
purrrfect/commands/flow_runs/: main.py  widgets.py
