[tool.poetry]
name = "purrrfect"
version = "0.1.0"
description = "A CLI helper for Prefect"
authors = ["Sam Phinizy <83414895+sam-phinizy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.10.11"
pydantic = "^1.10.8"
rich = "^13.3.5"
click = "^8.1.3"
textual = "^0.26.0"
typer = "^0.9.0"
pygum = "^0.1.0"
pyperclip = "^1.8.2"
dateparser = "^1.1.8"
krfzf-py = {git = "https://www.github.com/justfoolingaround/fzf.py"}
sqlitedict = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
purr = "purrrfect.cli:main_app"
